--- a/static/css/custom.scss
+++ b/static/css/custom.scss
@@ -2,8 +2,23 @@
 
 ---
 div.ibox-content{
-	width: 90%;
+	width: 80%;
+	align: center;
+	display: block;
+  	margin-left: auto;
+  	margin-right: auto;
 }
+#page-top {
+	background-color: #444242;
+
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 @import "search";
 @import "pygments";
 @import "open_sans";
