--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -18,6 +18,7 @@
             class="header-back"
             style="background-image: url({{ '/static/assets/img/' | prepend: site.baseurl }}{{ site.data.index.banners[0].src }});"
             title="{{ site.data.index.banners[0].title }}">
+                <h1 style="text-color:white;">PORTFOLIO</h1>
             </div>
         </div>
 
