header styling update

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,7 +1,6 @@
 <div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#inSlider" data-slide-to="0" class="active"></li>
-        <li data-target="#inSlider" data-slide-to="1"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
 
@@ -18,7 +17,7 @@
             class="header-back"
             style="background-image: url({{ '/static/assets/img/' | prepend: site.baseurl }}{{ site.data.index.banners[0].src }});"
             title="{{ site.data.index.banners[0].title }}">
-                <h1 style="text-color:white;">PORTFOLIO</h1>
+                <h1 style="text-color:white;text-align:center;">PORTFOLIO</h1>
             </div>
         </div>
 
